<resources>
    <string name="edit_nav_edit">Edit</string>
    <string name="edit_nav_save_and_share">Local／Share To></string>
    <string name="music_origin">Original</string>
    <string name="my_music">Music</string>
    <string name="local_music">Local Music</string>
    <string name="timeline_curr_time">%1$02d:%2$02d</string>
    <string name="empty_music">Original</string>
    <string name="alivc_mix_record_waring_content">Mix record video cannot add background music</string>
    <string name="alivc_editor_effect_compound_text">CompoundCaption</string>
    <string name="alivc_editor_effect_filter">Filter</string>
    <string name="alivc_editor_effect_music">Music</string>
    <string name="alivc_editor_effect_sticker">Sticker</string>
    <string name="alivc_editor_effect_pip">Pic In Pic</string>
    <string name="alivc_editor_effect_caption">Caption</string>
    <string name="alivc_editor_effect_caption_old">Caption_old</string>
    <string name="alivc_editor_effect_mv">MV</string>
    <string name="alivc_editor_effect_sound">Sound Effect</string>
    <string name="alivc_editor_effect_effect">Effect</string>
    <string name="alivc_editor_effect_time">Speed Control</string>
    <string name="alivc_editor_effect_transition">Transition</string>
    <string name="alivc_editor_effect_paint">Painting</string>
    <string name="alivc_editor_effect_cover">Album Art</string>
    <string name="alivc_editor_effect_videoeq">Adjust</string>
    <string name="alivc_editor_effect_roll_caption">Roll Caption</string>
    <string name="alivc_editor_effect_beauty">Beauty</string>
    <string name="alivc_editor_mananger_tittle">Effects</string>
    <string name="alivc_editor_manager_font">Font</string>
    <string name="alivc_editor_manager_delete">delete</string>
    <string name="alivc_editor_dialog_roll_caption_tittle">RollCaption</string>
    <string name="alivc_editor_manager_roll_caption_subtitle_title">Edit Subtitle</string>
    <string name="alivc_editor_dialog_roll_caption_subtitle">Subtitle</string>
    <string name="alivc_editor_dialog_roll_caption_color">Color</string>
    <string name="alivc_editor_dialog_roll_caption_font">Font</string>
    <string name="alivc_editor_dialog_roll_caption_clear">Clear</string>
    <string name="alivc_editor_dialog_roll_caption_edit">Edit</string>
    <string name="alivc_editor_dialog_roll_caption_finish">Finish</string>
    <string name="alivc_editor_dialog_transition_tittle">Transition</string>
    <string name="alivc_editor_dialog_transition_tip_limit">You must select at least two videos to add a transition</string>
    <string name="alivc_editor_dialog_transition_star">Star</string>
    <string name="alivc_editor_dialog_caption_tip_text_limit">No more than 10 characters</string>
    <string name="alivc_editor_dialog_caption_system_font">System Font</string>
    <string name="alivc_editor_dialog_caption_font">Font</string>
    <string name="alivc_editor_dialog_caption_font_system">System Font</string>
    <string name="alivc_editor_dialog_caption_keyboard">Keyboard</string>
    <string name="alivc_editor_dialog_caption_color">Color</string>
    <string name="alivc_editor_dialog_caption_background_color">Background</string>
    <string name="alivc_editor_dialog_caption_tip_not_support">Reverse playback does not support captions</string>
    <string name="alivc_editor_dialog_caption_effect">Effect</string>
    <string name="alivc_editor_dialog_none_effect">Original</string>
    <string name="alivc_editor_dialog_mv_more">More</string>
    <string name="alivc_editor_dialog_reset">Reset</string>
    <string name="alivc_editor_dialog_caption_animation">animation</string>
    <string name="alivc_editor_dialog_caption_style">style</string>
    <string name="alivc_editor_dialog_time_tittle">speed control</string>
    <string name="alivc_editor_dialog_time_tip_not_support">Images and multiple videos do not support speed control</string>
    <string name="alivc_editor_dialog_time_tip_apply">Click to apply</string>
    <string name="alivc_editor_dialog_time_no_effect">Original</string>
    <string name="alivc_editor_dialog_time_slow">Slower</string>
    <string name="alivc_editor_dialog_time_fast">Faster</string>
    <string name="alivc_editor_dialog_time_invert">Reverse</string>
    <string name="alivc_editor_dialog_time_repeat">Loop</string>
    <string name="alivc_editor_dialog_sound_tittle">Sound Effect</string>
    <string name="alivc_editor_dialog_sound_not_support">Can’t add sound effect. No original sound is found in the video.</string>
    <string name="alivc_editor_dialog_sound_default">Original</string>
    <string name="alivc_editor_dialog_sound_loli">Child</string>
    <string name="alivc_editor_dialog_sound_uncle">Adult</string>
    <string name="alivc_editor_dialog_sound_echo">Echo</string>
    <string name="alivc_editor_dialog_sound_reverb">KTV</string>
    <string name="alivc_editor_dialog_sound_robot">Robot</string>
    <string name="alivc_editor_dialog_sound_devil">Devil</string>
    <string name="alivc_editor_dialog_sound_minions">Minions</string>
    <string name="alivc_editor_dialog_sound_new_robot">New Robot</string>
    <string name="alivc_editor_dialog_sound_new_lolita">New Child</string>
    <string name="alivc_editor_dialog_sound_new_uncle">New Adult</string>
    <string name="alivc_editor_dialog_sound_howl">Howl</string>
    <string name="alivc_editor_dialog_sound_dialect">Dialect</string>
    <string name="alivc_editor_dialog_animate_tittle">Filter</string>
    <string name="alivc_editor_dialog_animate_revoke">Revoke</string>
    <string name="alivc_editor_dialog_animate_phantom">幻影</string>
    <string name="alivc_editor_dialog_animate_ghosting">重影</string>
    <string name="alivc_editor_dialog_animate_science_fiction">科幻</string>
    <string name="alivc_editor_dialog_animate_jitter">抖动</string>
    <string name="alivc_editor_dialog_animate_blur">朦胧</string>
    <string name="alivc_editor_dialog_animate_tip_applay">Hold down to add effect</string>
    <string name="alivc_editor_dialog_cover_tip_applay">Select Album Art</string>
    <string name="alivc_editor_dialog_none">Original</string>
    <string name="alivc_editor_dialog_effect_translate_up">Push Up</string>
    <string name="alivc_editor_dialog_effect_translate_left">Push Left</string>
    <string name="alivc_editor_dialog_effect_translate_down">Push Down</string>
    <string name="alivc_editor_dialog_effect_translate_right">Push Right</string>
    <string name="alivc_editor_dialog_effect_translate_effect_scale">Scale</string>
    <string name="alivc_editor_dialog_effect_translate_linearwipe">Linear wipe</string>
    <string name="alivc_editor_dialog_effect_shutter">Horizontal Bars</string>
    <string name="alivc_editor_dialog_effect_fade">Fade</string>
    <string name="alivc_editor_dialog_effect_circle">Circle</string>
    <string name="alivc_editor_dialog_effect_printer">Printer</string>
    <string name="alivc_editor_dialog_effect_rotate_by">RotateBy</string>
    <string name="alivc_editor_dialog_effect_rotate_to">RotateTo</string>
    <string name="alivc_editor_dialog_effect_set1">EffectSet1</string>
    <string name="alivc_editor_dialog_effect_set2">EffectSet2</string>
    <string name="alivc_editor_dialog_effect_wave">Wave</string>
    <string name="alivc_editor_dialog_effect_rotate_in">RotateIn</string>
    <string name="alivc_editor_dialog_effect_heat">Heat</string>
    <string name="alivc_editor_dialog_effect_roundscan">RoundScan</string>
    <string name="alivc_editor_dialog_effect_wave_jump">WaveJump</string>
    <string name="alivc_editor_toast_no_authorization">The value-added service does not have product authorization. Please check the authorization.</string>
    <string name="alivc_editor_toast_template_loading">Demo template loading, please wait.</string>
    <string name="alivc_editor_more_downloading">downloading</string>
    <string name="alivc_editor_more_title_sticker">More Stickers</string>
    <string name="alivc_editor_more_title_caption">More Captions</string>
    <string name="alivc_editor_more_title_mv">More MVs</string>
    <string name="alivc_editor_more_no_network">Poor network conditions</string>
    <string name="alivc_editor_more_tip_task">You cannot create more downloads</string>
    <string name="alivc_editor_more_title_animation_effect">More Animation Effect</string>
    <string name="alivc_editor_more_title_transition_effect">More Transition Effect</string>
    <string name="alivc_editor_publish_tittle">Publish</string>
    <string name="alivc_editor_publish_goback">Go back</string>
    <string name="alivc_editor_publish_continue">Creating</string>
    <string name="alivc_editor_publish_select_cover">Select Album Art</string>
    <string name="alivc_editor_publish_composing">Creating video</string>
    <string name="alivc_editor_publish_dialog_cancel_content_tip">Creating video，If you quit this page, the video creation task will be stopped？</string>
    <string name="alivc_editor_publish_not_shutdown_app">Do not close the app</string>
    <string name="alivc_editor_publish_uploading">Uploading %1$d%%</string>
    <string name="alivc_editor_publish_start">Uploading 0%</string>
    <string name="alivc_editor_publish_countoflimit">No more than 20 characters</string>
    <string name="alivc_editor_publish_compose_success">The video is created</string>
    <string name="alivc_editor_publish_compose_failed">Video creation failed</string>
    <string name="alivc_editor_publish_upload_success">Uploaded successfully</string>
    <string name="alivc_editor_publish_upload_failed">Uploading failed</string>
    <string name="alivc_editor_publish_tip_retry">Go back and try again later</string>
    <string name="alivc_editor_publish_tip_add_desc">Add a description here</string>
    <string name="alivc_editor_publish_my_video">My Videos</string>
    <string name="alivc_editor_publish_upload_error">Upload failed, please upload again</string>
    <string name="alivc_editor_publish_upload_get_image_auth_failure">Get the image upload auth Failure</string>
    <string name="alivc_editor_publish_upload_get_video_auth_failure">Get the video upload auth Failure</string>
    <string name="alivc_editor_publish_upload_param_error">Parameter missing</string>
    <string name="alivc_editor_publish_video_uploading">Video uploading:%s%%</string>
    <string name="alivc_editor_publish_image_uploading">Image uploading</string>
    <string name="alivc_editor_publish_upload_image_success">Image upload successfully</string>
    <string name="aliyun_svideo_editor_compose">compose</string>
    <string name="aliyun_svideo_editor_compose_and_upload">compose and upload</string>
    <string name="aliyun_svideo_editor_build_template">Build template</string>
    <string name="alivc_editor_cover_tittle">Select Album Art</string>
    <string name="alivc_editor_cover_fetch_cover_error">Select Album Art</string>
    <string name="alivc_editor_error_tip_play_video_error">The video format is invalid</string>
    <string name="alivc_editor_effect_text_alignment_left">left</string>
    <string name="alivc_editor_effect_text_alignment_right">right</string>
    <string name="alivc_editor_effect_text_alignment_center">center</string>
    <string name="alivc_editor_draft_server_url">enter server url</string>
    <string name="alivc_editor_draft_server_url_hint">server url</string>
    <string name="alivc_editor_draft_server_user_name">enter server user name</string>
    <string name="alivc_editor_draft_server_user_name_hint">user name</string>
    <string name="alivc_svideo_draft_menu_rename">Rename</string>
    <string name="alivc_svideo_draft_menu_update_cover">Update cover</string>
    <string name="alivc_svideo_draft_menu_copy">Copy</string>
    <string name="alivc_svideo_draft_menu_backup">Backup</string>
    <string name="alivc_svideo_menu_delete">Delete</string>
</resources>