<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/alivc_common_padding_6"
        android:paddingTop="@dimen/alivc_common_padding_20"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tab_filter"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_filter"/>
        <TextView
            android:id="@+id/tab_effect_audio_mix"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_music"/>
        <TextView
            android:id="@+id/tab_effect_overlay"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_sticker"/>

        <TextView
            android:id="@+id/tab_effect_caption"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_caption"/>
        <TextView
            android:id="@+id/tab_effect_mv"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_mv"/>
        <TextView
            android:id="@+id/tab_effect_sound"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_sound"/>
        <TextView
            android:id="@+id/tab_effect_filter"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_effect"/>
        <TextView
            android:id="@+id/tab_effect_time"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_time"/>

        <TextView
            android:id="@+id/tab_effect_transition"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_transition"/>

        <TextView
            android:id="@+id/tab_paint"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_paint"/>
        <TextView
            android:id="@+id/tab_cover"
            style="@style/alivc_svideo_effect_tab"
            android:text="@string/alivc_editor_effect_cover"/>

    </LinearLayout>
</HorizontalScrollView>
