<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="243dp"
    android:background="@color/alivc_common_theme_primary_darker"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alivc_rename_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:text="@string/alivc_svideo_draft_menu_rename"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alivc_common_bg_black_alpha_60" />

    <TextView
        android:id="@+id/alivc_update_cover_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:text="@string/alivc_svideo_draft_menu_update_cover"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alivc_common_bg_black_alpha_60" />

    <TextView
        android:id="@+id/alivc_copy_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:text="@string/alivc_svideo_draft_menu_copy"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alivc_common_bg_black_alpha_60" />

    <TextView
        android:id="@+id/alivc_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:text="@string/alivc_svideo_menu_delete"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alivc_common_bg_black_alpha_60" />

    <TextView
        android:id="@+id/alivc_backup_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:text="@string/alivc_svideo_draft_menu_backup"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />


</LinearLayout>