<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alivc_common_bg_black_alpha_70"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/roll_caption_clear_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/alivc_common_font_white"
            android:padding="@dimen/alivc_common_padding_10"
            android:text="@string/alivc_editor_dialog_roll_caption_clear"/>

        <ImageView
            android:id="@+id/roll_caption_apply_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/alivc_common_padding_10"
            android:src="@mipmap/aliyun_svideo_check" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/roll_caption_chooser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_100"
        android:gravity="center"
        android:layout_below="@id/top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_roll_caption_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/alivc_common_font_white"
            android:drawableTop="@mipmap/alivc_svideo_icon_roll_caption"
            android:drawablePadding="@dimen/alivc_common_margin_5"
            android:text="@string/alivc_editor_dialog_roll_caption_subtitle" />

        <TextView
            android:id="@+id/tv_roll_caption_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/alivc_svideo_edit_icon_roll_caption_color"
            android:drawablePadding="@dimen/alivc_common_margin_5"
            android:layout_marginLeft="@dimen/alivc_common_margin_30"
            android:layout_marginRight="@dimen/alivc_common_margin_30"
            android:textColor="@color/alivc_common_font_white"
            android:text="@string/alivc_editor_dialog_roll_caption_color" />

        <TextView
            android:id="@+id/tv_roll_caption_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/aliyun_svideo_icon_font"
            android:drawablePadding="@dimen/alivc_common_margin_5"
            android:textColor="@color/alivc_common_font_white"
            android:text="@string/alivc_editor_dialog_roll_caption_font" />

    </LinearLayout>

    <com.aliyun.svideo.editor.effects.rollcaption.RollCaptionColorView
        android:id="@+id/roll_caption_color_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_100"
        android:layout_below="@id/top"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/roll_caption_font_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_100"
        android:layout_below="@id/top"
        android:visibility="gone" />

</RelativeLayout>