<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alivc_editor_effect_height"
    android:orientation="vertical"
    android:background="@color/alivc_common_bg_black_alpha_70">
    <include
        layout="@layout/alivc_editor_include_effect_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_editor_dialog_effect_tittle_height"/>
    <FrameLayout
        android:id="@+id/fl_thumblinebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="@dimen/alivc_common_margin_10"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/alivc_editor_dialog_time_tip_apply"
        android:textColor="@color/alivc_common_font_white"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/alivc_common_margin_10"
        android:textSize="@dimen/alivc_common_font_11"
        android:layout_height="@dimen/alivc_editor_dialog_effect_tittle_height" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/alivc_common_padding_15"
        android:paddingRight="@dimen/alivc_common_padding_15"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/time_effect_none"
                android:layout_width="@dimen/alivc_common_size_icon_48"
                android:layout_height="@dimen/alivc_common_size_icon_48"
                android:src="@drawable/aliyun_svideo_video_edit_time_none_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alivc_common_font_12"
                android:layout_marginTop="@dimen/alivc_common_margin_5"
                android:textColor="@color/alivc_common_font_gray_light"
                android:text="@string/alivc_editor_dialog_time_no_effect"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/time_effect_slow"
                android:layout_width="@dimen/alivc_common_size_icon_48"
                android:layout_height="@dimen/alivc_common_size_icon_48"
                android:src="@drawable/aliyun_svideo_video_edit_time_slow_selector"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alivc_common_font_12"
                android:layout_marginTop="5dp"
                android:textColor="@color/alivc_common_font_gray_light"
                android:text="@string/alivc_editor_dialog_time_slow"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/time_effect_speed_up"
                android:layout_width="@dimen/alivc_common_size_icon_48"
                android:layout_height="@dimen/alivc_common_size_icon_48"
                android:src="@drawable/aliyun_svideo_video_edit_time_fast_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alivc_common_font_12"
                android:layout_marginTop="5dp"
                android:textColor="@color/alivc_common_font_gray_light"
                android:text="@string/alivc_editor_dialog_time_fast"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/time_effect_repeat_invert"
                android:layout_width="@dimen/alivc_common_size_icon_48"
                android:layout_height="@dimen/alivc_common_size_icon_48"
                android:src="@drawable/aliyun_svideo_video_edit_time_invert_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alivc_common_font_12"
                android:layout_marginTop="@dimen/alivc_common_margin_5"
                android:textColor="@color/alivc_common_font_gray_light"
                android:text="@string/alivc_editor_dialog_time_invert"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/time_effect_repeat"
                android:layout_width="@dimen/alivc_common_size_icon_48"

                android:layout_height="@dimen/alivc_common_size_icon_48"
                android:src="@drawable/aliyun_svideo_video_edit_time_repeat_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alivc_common_font_12"
                android:layout_marginTop="@dimen/alivc_common_margin_5"
                android:textColor="@color/alivc_common_font_gray_light"
                android:text="@string/alivc_editor_dialog_time_repeat"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>